   * Added a way to rename local players at game creation
   * Fixed picking the proper locale, the problem only occurred on some
     systems
   * Added a way to compile wesnoth on windows by using CMake + MSVC9.
   * Added the possibility to specify absolute paths for "--config-dir"
   * Added more command line arguments for starting a campaign + scenario
   * Added command line "preprocess" to preprocess a specified file/folder and
     output the result
   * Added command line "--data-dir" to explicitly override the data directory
   * Fixed the ping timeout not waiting for the default ping interval when
     ping timeout is not set to 0
   * Fixed a bug in scoring of AI recall list. Patch by billynux.
   * Strip whitespace characters from .ign patterns (bug #15902)
   * Fixed wesnoth_addon_manager's support for .ign files (bug #15846)
   * Never allow uploading *.pbl files (case-insensitive) to the add-ons
     server from the regular game client.
   * When warning the player about installing add-ons with missing dependencies,
     make 'OK' and 'Cancel' work as expected (bug #15960)
   * Fixed tab completion not working in the new lobby (bug #14730)
   * Fixed compilation for g++ 4.5
   * Cleaned up the gui2 code at various places
   * Don't crash if a [story] [part] [if] misses [then] or [else] (bug #16028)
   * Fix a crash on OS X caused by passing invalid utf8 to pango (bug #16020)
   * Hidden weapons (attack_weight = 0) no longer skew the best weapon selection
   * Prevent dereferencing freed memory when reporting malformed maps, i.e. when
     using an invalid terrain type
   * Fixed attack predictions for combats with a unit leveling up thanks to a kill
   * Fix rare layer's order bug about unit drawn above big south-west unit
   * Improvements to make Wesnoth compile better with g++-4.5 in C++-0x mode
   * Added ":undiscover" to clear all your discovered units from help
   * Added ":turn" to change the current turn/time of day in debug mode